--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,9 +28,6 @@
     float: left;
     height: 100%;
     padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .menubar__indexes {
